--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "php-open-source-saver/jwt-auth": "^2.8",
+        "spatie/laravel-permission": "^6.16",
         "zircote/swagger-php": "^5.0"
     },
     "require-dev": {
