--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.10.1",
         "php-open-source-saver/jwt-auth": "^2.8",
         "spatie/laravel-permission": "^6.16",
+        "srmklive/paypal": "^3.0",
         "zircote/swagger-php": "^5.0"
     },
     "require-dev": {
