--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php-open-source-saver/jwt-auth": "^2.8",
         "spatie/laravel-permission": "^6.16",
         "srmklive/paypal": "^3.0",
+        "stripe/stripe-php": "^16.6",
         "zircote/swagger-php": "^5.0"
     },
     "require-dev": {
